credentials add field 'site'