@@ -55,7 +55,10 @@ import org.springframework.test.util.ReflectionTestUtils;
 class PlusServerOrchestratorPluginTest {
 
     private static final Csp csp = Csp.PLUS_SERVER;
-
+    private final String userId = "userId";
+    private final String siteName = "default";
+    private final String regionName = "RegionOne";
+    private final UUID uuid = UUID.randomUUID();
     @Mock
     private OpenstackTerraformResourceHandler mockTerraformResourceHandler;
     @Mock
@@ -174,15 +177,13 @@ class PlusServerOrchestratorPluginTest {
     @Test
     void testGetExistingResourceNamesWithKind() {
         // Setup
-        when(mockResourceManager.getExistingResourceNamesWithKind(csp, "userId",
-                UUID.fromString("254132ba-f126-479e-9f84-f46271cc3acf"), "region",
-                DeployResourceKind.VM)).thenReturn(List.of("value"));
+        when(mockResourceManager.getExistingResourceNamesWithKind(
+                csp, siteName, regionName, userId, DeployResourceKind.VM, uuid))
+                .thenReturn(List.of("value"));
 
         // Run the test
-        final List<String> result =
-                plugin.getExistingResourceNamesWithKind("userId",
-                        "region", DeployResourceKind.VM,
-                        UUID.fromString("254132ba-f126-479e-9f84-f46271cc3acf"));
+        final List<String> result = plugin.getExistingResourceNamesWithKind(
+                siteName, regionName, userId, DeployResourceKind.VM, uuid);
 
         // Verify the results
         assertThat(result).isEqualTo(List.of("value"));
@@ -191,15 +192,13 @@ class PlusServerOrchestratorPluginTest {
     @Test
     void testGetExistingResourceNamesWithKind_OpenstackResourceManagerReturnsNoItems() {
         // Setup
-        when(mockResourceManager.getExistingResourceNamesWithKind(csp, "userId",
-                UUID.fromString("254132ba-f126-479e-9f84-f46271cc3acf"), "region",
-                DeployResourceKind.VM)).thenReturn(Collections.emptyList());
+        when(mockResourceManager.getExistingResourceNamesWithKind(
+                csp, siteName, regionName, userId, DeployResourceKind.VM, uuid))
+                .thenReturn(Collections.emptyList());
 
         // Run the test
-        final List<String> result =
-                plugin.getExistingResourceNamesWithKind("userId",
-                        "region", DeployResourceKind.VM,
-                        UUID.fromString("254132ba-f126-479e-9f84-f46271cc3acf"));
+        final List<String> result = plugin.getExistingResourceNamesWithKind(
+                siteName, regionName, userId, DeployResourceKind.VM, uuid);
 
         // Verify the results
         assertThat(result).isEqualTo(Collections.emptyList());
@@ -208,14 +207,13 @@ class PlusServerOrchestratorPluginTest {
     @Test
     void testGetAvailabilityZonesOfRegion() {
         // Setup
-        when(mockResourceManager.getAvailabilityZonesOfRegion(csp, "userId",
-                UUID.fromString("6f8f9ca6-85ff-42e2-9da0-0fe8defb8e6d"), "region"))
+        when(mockResourceManager.getAvailabilityZonesOfRegion(
+                csp, siteName, regionName, userId, uuid))
                 .thenReturn(List.of("value"));
 
         // Run the test
-        final List<String> result =
-                plugin.getAvailabilityZonesOfRegion("userId",
-                        "region", UUID.fromString("6f8f9ca6-85ff-42e2-9da0-0fe8defb8e6d"));
+        final List<String> result = plugin.getAvailabilityZonesOfRegion(
+                siteName, regionName, userId, uuid);
 
         // Verify the results
         assertThat(result).isEqualTo(List.of("value"));
@@ -224,14 +222,13 @@ class PlusServerOrchestratorPluginTest {
     @Test
     void testGetAvailabilityZonesOfRegion_OpenstackResourceManagerReturnsNoItems() {
         // Setup
-        when(mockResourceManager.getAvailabilityZonesOfRegion(csp, "userId",
-                UUID.fromString("6f8f9ca6-85ff-42e2-9da0-0fe8defb8e6d"), "region"))
+        when(mockResourceManager.getAvailabilityZonesOfRegion(csp, siteName, regionName, userId,
+                uuid))
                 .thenReturn(Collections.emptyList());
 
         // Run the test
         final List<String> result =
-                plugin.getAvailabilityZonesOfRegion("userId",
-                        "region", UUID.fromString("6f8f9ca6-85ff-42e2-9da0-0fe8defb8e6d"));
+                plugin.getAvailabilityZonesOfRegion(siteName, regionName, userId, uuid);
 
         // Verify the results
         assertThat(result).isEqualTo(Collections.emptyList());
@@ -239,18 +236,16 @@ class PlusServerOrchestratorPluginTest {
 
     @Test
     void testGetMetricsForResource() {
-        assertThat(plugin.getMetricsForResource(
-                new ResourceMetricsRequest(UUID.fromString("7066f16d-3da6-4851-81cf-2c0c3870e15b"),
-                        new DeployResource(), MonitorResourceType.CPU, 0L, 0L, 0, false,
-                        "userId"))).isEqualTo(Collections.emptyList());
+        assertThat(plugin.getMetricsForResource(new ResourceMetricsRequest(uuid, getRegion(),
+                new DeployResource(), MonitorResourceType.CPU, 0L, 0L, 0, false,
+                userId))).isEqualTo(Collections.emptyList());
     }
 
     @Test
     void testGetMetricsForService() {
-        assertThat(plugin.getMetricsForService(
-                new ServiceMetricsRequest(UUID.fromString("78846edd-512b-41f7-a858-e9bca10e0ef8"),
-                        List.of(new DeployResource()), MonitorResourceType.CPU, 0L, 0L, 0, false,
-                        "userId"))).isEqualTo(Collections.emptyList());
+        assertThat(plugin.getMetricsForService(new ServiceMetricsRequest(uuid, getRegion(),
+                List.of(new DeployResource()), MonitorResourceType.CPU, 0L, 0L, 0, false,
+                userId))).isEqualTo(Collections.emptyList());
     }
 
     @Test
@@ -258,7 +253,7 @@ class PlusServerOrchestratorPluginTest {
         // Setup
         final ServiceStateManageRequest serviceStateManageRequest = new ServiceStateManageRequest();
         serviceStateManageRequest.setUserId("userId");
-        serviceStateManageRequest.setRegionName("regionName");
+        serviceStateManageRequest.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity = new DeployResourceEntity();
         deployResourceEntity.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity.setResourceId("resourceId");
@@ -267,7 +262,7 @@ class PlusServerOrchestratorPluginTest {
         // Configure OpenstackServersManager.startService(...).
         final ServiceStateManageRequest request = new ServiceStateManageRequest();
         request.setUserId("userId");
-        request.setRegionName("regionName");
+        request.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity1 = new DeployResourceEntity();
         deployResourceEntity1.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity1.setResourceId("resourceId");
@@ -287,7 +282,7 @@ class PlusServerOrchestratorPluginTest {
         // Setup
         final ServiceStateManageRequest serviceStateManageRequest = new ServiceStateManageRequest();
         serviceStateManageRequest.setUserId("userId");
-        serviceStateManageRequest.setRegionName("regionName");
+        serviceStateManageRequest.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity = new DeployResourceEntity();
         deployResourceEntity.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity.setResourceId("resourceId");
@@ -296,7 +291,7 @@ class PlusServerOrchestratorPluginTest {
         // Configure OpenstackServersManager.startService(...).
         final ServiceStateManageRequest request = new ServiceStateManageRequest();
         request.setUserId("userId");
-        request.setRegionName("regionName");
+        request.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity1 = new DeployResourceEntity();
         deployResourceEntity1.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity1.setResourceId("resourceId");
@@ -316,7 +311,7 @@ class PlusServerOrchestratorPluginTest {
         // Setup
         final ServiceStateManageRequest serviceStateManageRequest = new ServiceStateManageRequest();
         serviceStateManageRequest.setUserId("userId");
-        serviceStateManageRequest.setRegionName("regionName");
+        serviceStateManageRequest.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity = new DeployResourceEntity();
         deployResourceEntity.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity.setResourceId("resourceId");
@@ -325,7 +320,7 @@ class PlusServerOrchestratorPluginTest {
         // Configure OpenstackServersManager.stopService(...).
         final ServiceStateManageRequest request = new ServiceStateManageRequest();
         request.setUserId("userId");
-        request.setRegionName("regionName");
+        request.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity1 = new DeployResourceEntity();
         deployResourceEntity1.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity1.setResourceId("resourceId");
@@ -345,7 +340,7 @@ class PlusServerOrchestratorPluginTest {
         // Setup
         final ServiceStateManageRequest serviceStateManageRequest = new ServiceStateManageRequest();
         serviceStateManageRequest.setUserId("userId");
-        serviceStateManageRequest.setRegionName("regionName");
+        serviceStateManageRequest.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity = new DeployResourceEntity();
         deployResourceEntity.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity.setResourceId("resourceId");
@@ -354,7 +349,7 @@ class PlusServerOrchestratorPluginTest {
         // Configure OpenstackServersManager.stopService(...).
         final ServiceStateManageRequest request = new ServiceStateManageRequest();
         request.setUserId("userId");
-        request.setRegionName("regionName");
+        request.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity1 = new DeployResourceEntity();
         deployResourceEntity1.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity1.setResourceId("resourceId");
@@ -374,7 +369,7 @@ class PlusServerOrchestratorPluginTest {
         // Setup
         final ServiceStateManageRequest serviceStateManageRequest = new ServiceStateManageRequest();
         serviceStateManageRequest.setUserId("userId");
-        serviceStateManageRequest.setRegionName("regionName");
+        serviceStateManageRequest.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity = new DeployResourceEntity();
         deployResourceEntity.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity.setResourceId("resourceId");
@@ -383,7 +378,7 @@ class PlusServerOrchestratorPluginTest {
         // Configure OpenstackServersManager.restartService(...).
         final ServiceStateManageRequest request = new ServiceStateManageRequest();
         request.setUserId("userId");
-        request.setRegionName("regionName");
+        request.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity1 = new DeployResourceEntity();
         deployResourceEntity1.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity1.setResourceId("resourceId");
@@ -403,7 +398,7 @@ class PlusServerOrchestratorPluginTest {
         // Setup
         final ServiceStateManageRequest serviceStateManageRequest = new ServiceStateManageRequest();
         serviceStateManageRequest.setUserId("userId");
-        serviceStateManageRequest.setRegionName("regionName");
+        serviceStateManageRequest.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity = new DeployResourceEntity();
         deployResourceEntity.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity.setResourceId("resourceId");
@@ -412,7 +407,7 @@ class PlusServerOrchestratorPluginTest {
         // Configure OpenstackServersManager.restartService(...).
         final ServiceStateManageRequest request = new ServiceStateManageRequest();
         request.setUserId("userId");
-        request.setRegionName("regionName");
+        request.setRegion(getRegion());
         final DeployResourceEntity deployResourceEntity1 = new DeployResourceEntity();
         deployResourceEntity1.setId(UUID.fromString("15c8f06e-d7d5-4620-a3b4-6a98f201fa21"));
         deployResourceEntity1.setResourceId("resourceId");
@@ -449,8 +444,9 @@ class PlusServerOrchestratorPluginTest {
         final ServiceFlavorPriceRequest request = new ServiceFlavorPriceRequest();
         request.setServiceTemplateId("serviceTemplateId");
         request.setFlavorName("flavorName");
-        request.setUserId("userId");
-        request.setRegionName("regionName");
+        request.setUserId(userId);
+        request.setRegionName(regionName);
+        request.setSiteName(siteName);
         final RatingMode flavorRatingMode = new RatingMode();
         request.setFlavorRatingMode(flavorRatingMode);
 
@@ -473,8 +469,9 @@ class PlusServerOrchestratorPluginTest {
         final ServiceFlavorPriceRequest request1 = new ServiceFlavorPriceRequest();
         request1.setServiceTemplateId("serviceTemplateId");
         request1.setFlavorName("flavorName");
-        request1.setUserId("userId");
-        request1.setRegionName("regionName");
+        request1.setUserId(userId);
+        request1.setRegionName(regionName);
+        request1.setSiteName(siteName);
         final RatingMode flavorRatingMode1 = new RatingMode();
         request1.setFlavorRatingMode(flavorRatingMode1);
         when(mockPricingCalculator.getServiceFlavorPrice(request1)).thenReturn(flavorPriceResult);
@@ -485,5 +482,13 @@ class PlusServerOrchestratorPluginTest {
 
         // Verify the results
         assertThat(result).isEqualTo(expectedResult);
+    }
+
+    private Region getRegion() {
+        Region region = new Region();
+        region.setName(regionName);
+        region.setSite(siteName);
+        region.setArea("area");
+        return region;
     }
 }
